Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-09-24}
+    \date{2018-09-25}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -4921,7 +4921,7 @@ How \emph{confident} should we be about the estimated values
 \end{note}
 
  Let's go back to the regression with one variable and remind ourselves
-of the example at the end of chapter \ref{lin-reg}. There we introduced
+of the example at the end of chapter \ref{linreg}. There we introduced
 the term \emph{confidence interval}, shown here as the shaded area:
 
 \begin{center}\includegraphics{ScPoEconometrics_files/figure-latex/unnamed-chunk-126-1} \end{center}
